--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,12 +1,24 @@
-input {
-  display: block;
-  margin-bottom: 10px; }
-
-input[type='text'], input[type='password'] {
-  border-style: none;
-  border: 2px solid black;
-  height: 20px;
-  width: 300px; }
-
-.progressbar {
-  width: 25%; }
+.up,.down,.vote{
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+}
+.down,.up {
+  cursor: pointer;
+  background-color: #c2c2c2;
+}
+.vote{
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  background-color: #ffffff;
+}
+.voter{
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 122px;
+  font-size: 0;
+}
